layout css modified for ppt

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1915,13 +1915,13 @@ ul.error-list {margin:5px 20px; padding:0;}
     visibility : visible;
 }
 .m-hd {
-    font-size: 3em;
+    font-size: 2.4em;
     line-height:1.2em;
     font-family: 'Noto Sans', sans-serif;
     font-weight: 700;
-    letter-spacing: -0.04em;
     position : relative;
     margin-bottom : 4px;
+    margin-top: 24px;
 }
 .emty:before {
     color : #888;
@@ -2496,7 +2496,7 @@ ul._spcSgstn li:not(:last-of-type) {
     margin: 14px 2px 14px 24px;
 }
 #logo img {
-    max-width : 120px;
+    max-width : 128px;
     padding-top : 4px;
 }
 #glb-mnu {
@@ -2569,7 +2569,7 @@ ul._spcSgstn li:not(:last-of-type) {
     line-height : 16px;
     display : inline-block;
     padding : 24px 16px 20px;
-    font-size : 1em;
+    font-size : 0.857em;
     color : #757575;
     letter-spacing : 0.05em;
 }
